--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 PersonalProjectManagmentTool/ppmtool.iml
 PersonalProjectManagmentTool/.idea/workspace.xml
+PersonalProjectManagmentTool/.idea/workspace.xml
