--- a/PersonalProjectManagmentTool/src/main/resources/application.properties
+++ b/PersonalProjectManagmentTool/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/agileppmt
-spring.datasource.username=rohit
-spring.datasource.password=rohit
+
+#Personal Laptop  ------Credentials
+#spring.datasource.username=rohit
+#spring.datasource.password=rohit
+
+#Infi Laptop ------Credentials
+spring.datasource.username=root
+spring.datasource.password=root
+
 
 #Using the right database platform is very important on SpringBoot 2.0
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
