--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 PersonalProjectManagmentTool/ppmtool.iml
 PersonalProjectManagmentTool/.idea/
+PersonalProjectManagmentTool/target/
+ppmtool-react-client/.vscode
 
