--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 PersonalProjectManagmentTool/ppmtool.iml
 PersonalProjectManagmentTool/.idea/
+PersonalProjectManagmentTool/.idea/misc.xml
 PersonalProjectManagmentTool/target/
 ppmtool-react-client/.vscode
 
