--- a/PersonalProjectManagmentTool/src/main/resources/application.properties
+++ b/PersonalProjectManagmentTool/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/agileppmt
 
 #Personal Laptop  ------Credentials
-#spring.datasource.username=rohit
-#spring.datasource.password=rohit
+spring.datasource.username=rohit
+spring.datasource.password=rohit
 
 #Infi Laptop ------Credentials
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 
 #Using the right database platform is very important on SpringBoot 2.0
