--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 PersonalProjectManagmentTool/ppmtool.iml
-PersonalProjectManagmentTool/.idea/
-PersonalProjectManagmentTool/.idea/misc.xml
+PersonalProjectManagmentTool/.idea
 PersonalProjectManagmentTool/target/
 ppmtool-react-client/.vscode
 ppmtool-react-client/node_modules
