--- a/PersonalProjectManagmentTool/src/main/resources/application.properties
+++ b/PersonalProjectManagmentTool/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.datasource.password=rohit
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 #CONFLICT WITH HEROKU from localhost
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL7Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
